# PythonAPI

./: .flake8  .gitignore  .gitlab-ci.yml  .~lock.SR_guide.odt#  LICENSE  README.md  Randomizer.sh  SR_guide.odt  launch.sh  lidar.pcd  package.xml  pyproject.toml  requirements.txt  settings.py  setup.cfg  setup.py
RS_scripts/: GUI.py  Randomizer.py
Random-Scenario/: GUI.py  Randomizer.py  Untitled Document  tkinter testing.py
examples/: kitti_parser.py
lgsvl/: __init__.py  agent.py  controllable.py  geometry.py  remote.py  sensor.py  simulator.py  utils.py
quickstart/: 01-connecting-to-simulator.py  02-loading-scene-show-spawns.py  03-raycast.py  04-ego-drive-straight.py  05-ego-drive-in-circle.py  06-save-camera-image.py  07-save-lidar-point-cloud.py  08-create-npc.py  09-reset-scene.py  10-npc-follow-the-lane.py  11-collision-callbacks.py  12-create-npc-on-lane.py  13-npc-follow-waypoints.py  14-create-pedestrians.py  15-pedestrian-walk-randomly.py  16-pedestrian-follow-waypoints.py  17-many-pedestrians-walking.py  18-weather-effects.py  19-time-of-day.py  20-enable-sensors.py  21-map-coordinates.py  22-connecting-bridge.py  23-npc-callbacks.py  24-ego-drive-straight-non-realtime.py  25-waypoint-flying-npc.py  26-control-traffic-lights.py  26-npc-trigger-waypoints.py  27-control-traffic-lights.py  28-control-traffic-cone.py  29-add-random-agents.py  30-time-to-collision-trigger.py  31-wait-for-distance-trigger.py  32-pedestrian-time-to-collision.py  33-ego-drive-stepped.py  34-simulator-cam-set.py  35-spawn-multi-robots.py  36-send-destination-to-nav2.py  (+3 more)
(+58 files in other folders)
