<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lgsvl</name>
  <version>2021.1.0</version>
  <description>A Python API for SVL Simulator</description>
  <maintainer email="hadi.tabatabaee@lge.com">Hadi Tabatabaee</maintainer>
  <license>Other</license>

  <depend>python3-environs-pip</depend>
  <depend>python3-numpy</depend>
  <depend>python3-websocket</depend>
  <depend>python3-websockets</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
